# NLP

./: .gitignore  01_Text_Preprocessing_Steps.ipynb  02_Apply_Tokenization.ipynb  03_Removal_stop_words.ipynb  04_Apply_stemming.ipynb  05_Apply_Lemmatizer.ipynb  README.md  pyproject.toml  requirements.txt
