[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-nlp"
version = "0.1.0"
description = "A brief description of your project"
authors = [
    { name = "Asutosh sidhya", email = "ashutoshsidhya@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
